--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
+# Fill in the following environment variables
+# with your Supabase project details.
+# You can find these in your Supabase project settings.
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
