--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cardweb",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
